# open-webui-knowledge-import

./: .env.example  .gitignore  .ruff.toml  LICENSE  README.md  knowledge_import.py  pyproject.toml  requirements.txt  test_demo.sh  test_knowledge_import.py
examples/documents/a/: sample1.txt  sample2.md
examples/documents/b/: document1.txt  document2.md
knowledge_import/: __init__.py  api.py  config.py  scanner.py  session.py  ui.py
